[workspace.package]
repository = "https://github.com/MaticianInc/portal"
authors = ["Eric Seppanen <eric@maticrobots.com>"]

[workspace]
resolver = "2"
members = [
    "jwt-webcrypto",
    "portal-client",
    "portal-router",
    "demo-router",
    "portal-types",
]

[workspace.dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
base64 = { version = "0.21.7", default-features = false, features = ["alloc"] }
clap = { version = "4.5.2", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7" }
dashmap = "5.5.3"
futures = "0.3.30"
futures-util = { version = "0.3.28", default-features = false }
js-sys = "0.3.67"
jsonwebtoken = "9.2.0"
pem = { version = "3.0.3", default-features = false }
pin-project = "1.1.0"
rand = "0.8.5"
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.4"
tokio = "1.30.0"
tokio-stream = "0.1.14"
tokio-tungstenite = {version = "0.21.0", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7.8"
url = "2.4.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.40"
wasm-bindgen-test = "0.3.40"
web-sys = { version = "0.3.68", features = ["Crypto", "CryptoKey", "SubtleCrypto", "HmacImportParams", "EcKeyImportParams", "EcdsaParams", "Window", "console"] }
worker = "0.3.0"
worker-sys = "0.3.0"

jwt-webcrypto = { path = "jwt-webcrypto" }
