[package]
name = "demo-router"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
matic-portal-types = { version = "0.1", path = "../portal-types" }

async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
dashmap.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
clap.workspace = true
tracing-test.workspace = true
matic-portal-client = { version = "0.1", path = "../portal-client" }