[package]
name = "demo-router"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
matic-portal-types = { version = "0.2", path = "../portal-types" }

axum.workspace = true
axum-extra.workspace = true
dashmap.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "io-std", "sync"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
bytes.workspace = true
clap.workspace = true
tracing-test.workspace = true
matic-portal-client = { version = "0.4.0-alpha1", path = "../portal-client" }
