[package]
name = "jwt-webcrypto"
authors = ["Eric Seppanen <eric@matician.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
base64 = { workspace = true, default-features = false, features = ["alloc"] }
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["Crypto", "CryptoKey", "SubtleCrypto", "HmacImportParams", "EcKeyImportParams", "EcdsaParams", "Window", "console"] }

[dev-dependencies]
wasm-bindgen-test.workspace = true
pem = { workspace = true, default-features = false }
