[package]
name = "portal-client"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
pin-project.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[dev-dependencies]
clap.workspace = true
tracing-subscriber.workspace = true
tokio-util = { version = "0.7.10", features = ["io"] }