[package]
name = "matic-portal-client"
description = "Client library for the Matic Portal service"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.70.0"
authors.workspace = true
repository.workspace = true

[dependencies]
matic-portal-types = { version = "0.2", path = "../portal-types" }

anyhow.workspace = true
pin-project.workspace = true
futures-util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tokio-util = { workspace = true, features = ["io"] }
url.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tokio-tungstenite = { workspace = true, features = ["native-tls"] }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }

[dev-dependencies]
clap.workspace = true
tokio = { workspace = true, features = ["io-std"] }
tracing-subscriber.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[lints.clippy]
mem_forget = "warn"
get_unwrap = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
