[package]
name = "portal-router"
authors = ["Eric Seppanen <eric@matician.com>"]
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
portal-types.path = "../portal-types"

async-trait.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
futures.workspace = true
js-sys.workspace = true
jwt-webcrypto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
worker.workspace = true
worker-sys.workspace = true
