[package]
name = "matic-portal-types"
description = "Common types for Matic Portal servers and clients"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.70.0"
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[lints.clippy]
mem_forget = "warn"
get_unwrap = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"